# lyrics-plus-overlay

./: index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  SettingsPanel.css  SettingsPanel.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
